tests/reject/no_main.ty
# both compilers must reject a program with no main procedure.
fn helper() -> int:
    return 1
